--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -16,6 +16,7 @@
     overscroll-behavior-y: none;
     -webkit-tap-highlight-color: transparent;
     font-family: $fontOpenSans;
+    background-color: $white;
   }
   
   p {
