--- a/assets/scss/fonts.scss
+++ b/assets/scss/fonts.scss
@@ -1,76 +1,49 @@
-@font-face {
-    font-family: 'Open Sans 300';
-    font-style: normal;
-    font-weight: 300;
-    src: local(''),
-        url('assets/fonts/open-sans-v34-latin-300.woff2') format('woff2'),
-        url('assets/fonts/open-sans-v34-latin-300.woff') format('woff')
-}
-
-@font-face {
-    font-family: 'Open Sans 400';
-    font-style: normal;
-    font-weight: 400;
-    src: local(''),
-        url('assets/fonts/open-sans-v34-latin-regular.woff2') format('woff2'),
-        url('assets/fonts/open-sans-v34-latin-regular.woff') format('woff')
-}
-
-@font-face {
-    font-family: 'Open Sans 700';
-    font-style: normal;
-    font-weight: 700;
-    src: local(''),
-        url('assets/fonts/open-sans-v34-latin-700.woff2') format('woff2'),
-        url('assets/fonts/open-sans-v34-latin-700.woff') format('woff')
-}
-
-@font-face {
-    font-family: 'Open Sans 800';
-    font-style: normal;
-    font-weight: 800;
-    src: local(''),
-        url('assets/fonts/open-sans-v34-latin-800.woff2') format('woff2'),
-        url('assets/fonts/open-sans-v34-latin-800.woff') format('woff')
-  }
-
-  @font-face {
-    font-family: 'Lora Regular';
-    font-style: normal;
-    src: local(''),
-        url('assets/fonts/Lora-Regular.ttf') format('truetype')
-  }
-
-  @font-face {
-    font-family: 'Thunder Exra Bold';
-    font-style: normal;
-    src: local(''),
-        url('assets/fonts/Thunder-ExtraBoldLC.woff2') format('woff2')
-  }
 
   @font-face {
     font-family: 'Thunder Light';
     font-style: normal;
     src: local(''),
-        url('assets/fonts/Thunder-LightLC.woff2') format('woff2')
+        url('assets/fonts/Thunder-LightLC.woff2') format('woff2'),
+        url('assets/fonts/Thunder-LightLC.woff') format('woff')
+  }
+
+  @font-face {
+    font-family: 'Thunder Semi Bold';
+    font-style: normal;
+    src: local(''),
+        url('assets/fonts/Thunder-SemiBoldLC.woff2') format('woff2'),
+        url('assets/fonts/Thunder-SemiBoldLC.woff') format('woff')
   }
 
   @font-face {
     font-family: 'Thunder Bold';
     font-style: normal;
     src: local(''),
-        url('assets/fonts/Thunder-BoldLC.woff2') format('woff2')
+        url('assets/fonts/Thunder-BoldLC.woff2') format('woff2'),
+        url('assets/fonts/Thunder-BoldLC.woff') format('woff')
   }
 
-  @mixin open-sans-400 {
+  @font-face {
+    font-family: 'Thunder Exra Bold';
+    font-style: normal;
+    src: local(''),
+        url('assets/fonts/Thunder-ExtraBoldLC.woff2') format('woff2'),
+        url('assets/fonts/Thunder-ExtraBoldLC.woff') format('woff')
+  }
+
+  @mixin thunder-light {
     font-family: 'Thunder Light';
   }
 
-  @mixin open-sans-700 {
-    font-family: 'Thunder Exra Bold';
+  @mixin thunder-semi-bold {
+    font-family: 'Thunder Semi Bold';
   }
-  
+
   @mixin thunder-bold {
     font-family: 'Thunder Bold';
+  }
+
+  @mixin thunder-extra-bold {
+    font-family: 'Thunder Exra Bold';
   }
   
