--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -15,7 +15,7 @@
     margin: 0;
     overscroll-behavior-y: none;
     -webkit-tap-highlight-color: transparent;
-    font-family: $fontOpenSans;
+    font-family: $thunder-regular;
     background-color: $white;
   }
   
