--- a/assets/scss/fonts-styles.scss
+++ b/assets/scss/fonts-styles.scss
@@ -1,10 +1,10 @@
 @mixin fs-nav-title {
 	@include thunder-semi-bold;
-	font-size: 16rem;
+	font-size: 18rem;
 	line-height: 100%;
 	letter-spacing: 0.05em;
     text-transform: uppercase;
-	color: $gold;
+	color: $black;
 
 	@include tablet {
 		font-size: 18rem;
@@ -58,7 +58,7 @@
 
 @mixin fs-article-title {
     @include thunder-bold;
-	font-size: 16rem;
+	font-size: 60rem;
 	// line-height: 100%;
 	letter-spacing: 0;
     text-transform: uppercase;
@@ -78,7 +78,7 @@
 
 @mixin fs-article-category {
     @include thunder-bold;
-	font-size: 16rem;
+	font-size: 40rem;
 	line-height: 100%;
 	letter-spacing: 0.05em;
     text-transform: uppercase;
@@ -134,4 +134,26 @@
 }
 .fs-caption{
 	@include fs-caption;
+}
+
+@mixin fs-li-menu-mb {
+	@include thunder-semi-bold;
+	font-size: 24rem;
+	line-height: 100%;
+	letter-spacing: 0.05em;
+    text-transform: uppercase;
+}
+.fs-li-menu-mb{
+	@include fs-li-menu-mb;
+}
+
+@mixin fs-sub-li-menu-mb {
+	@include thunder-light;
+	font-size: 18rem;
+	line-height: 100%;
+	letter-spacing: 0.05em;
+    text-transform: uppercase;
+}
+.fs-sub-li-menu-mb{
+	@include fs-sub-li-menu-mb;
 }
