--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -9,13 +9,20 @@
     user-select: none;
     -webkit-user-drag: none;
   }
+
+  html {
+    background-color: #022859;
+  }
   
   body {
     position: relative;
-    margin: 0;
+    margin: 0 auto;
     -webkit-tap-highlight-color: transparent;
     font-family: $thunder-regular;
     background-color: $white;
+    max-width: 1920px;
+    border: 2px solid $black;
+    min-height: 100vh;
   }
   
   p {
