--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -11,7 +11,7 @@
   }
 
   html {
-    background-color: #022859;
+    background-color: black;
   }
   
   body {
@@ -21,8 +21,8 @@
     font-family: $thunder-regular;
     background-color: $white;
     max-width: 1920px;
-    border: 2px solid $black;
     min-height: 100vh;
+    padding: 40px;
   }
   
   p {
