--- a/assets/scss/fonts-styles.scss
+++ b/assets/scss/fonts-styles.scss
@@ -76,17 +76,17 @@
 
 @mixin fs-h1 {
 	@include thunder-bold;
-	font-size: 16rem;
+	font-size: 40rem;
 	line-height: 100%;
 	letter-spacing: 0.05em;
     text-transform: uppercase;
 
 	@include tablet {
-		font-size: 18rem;
+		font-size: 55rem;
 	}
 
 	@include desktop {
-		font-size: 22rem;
+		font-size: 50rem;
 	}
 }
 .fs-h1 {
@@ -95,33 +95,52 @@
 
 @mixin fs-h2 {
     @include thunder-bold;
-	font-size: 30rem;
+	font-size: 35rem;
 	line-height: 100%;
 	letter-spacing: 0;
     text-transform: uppercase;
 
 	@include tablet {
-		font-size: 60rem;
+		font-size: 45rem;
 	}
 
 	@include desktop {
-		font-size: 50rem;
+		font-size: 40rem;
 	}
 }
 .fs-h2 {
 	@include fs-h2;
 }
 
+@mixin fs-h3 {
+    @include thunder-bold;
+	font-size: 28rem;
+	line-height: 100%;
+	letter-spacing: 0;
+    text-transform: uppercase;
+
+	@include tablet {
+		font-size: 35rem;
+	}
+
+	@include desktop {
+		font-size: 30rem;
+	}
+}
+.fs-h3 {
+	@include fs-h3;
+}
+
 @mixin fs-article-title {
     @include thunder-bold;
-	font-size: 60rem;
+	font-size: 80rem;
 	// line-height: 100%;
 	letter-spacing: 0;
     text-transform: uppercase;
 	color: #A81B1C;
 
 	@include tablet {
-		font-size: 18rem;
+		font-size: 120rem;
 	}
 
 	@include desktop {
@@ -134,14 +153,14 @@
 
 @mixin fs-article-category {
     @include thunder-bold;
-	font-size: 40rem;
+	font-size: 30rem;
 	line-height: 100%;
 	letter-spacing: 0.05em;
     text-transform: uppercase;
 	color: #022859;
 
 	@include tablet {
-		font-size: 18rem;
+		font-size: 45rem;
 	}
 
 	@include desktop {
