--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -30,11 +30,11 @@
     -webkit-margin-start: 0px;
   }
   
-  ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0px;
-  }
+  // ul {
+  //   list-style-type: none;
+  //   padding: 0;
+  //   margin: 0px;
+  // }
   
   a {
     text-decoration: inherit;
