--- a/assets/scss/breakpoints.scss
+++ b/assets/scss/breakpoints.scss
@@ -4,7 +4,7 @@ $tablet: 1024px;
 $desktop: 1440px;
 
 @mixin mobile-only {
-    @media (max-width: ($mobile - 1)) {
+    @media (max-width: ($mobile)) {
         @content;
     }
 }
