--- a/assets/scss/variables/_colors.scss
+++ b/assets/scss/variables/_colors.scss
@@ -1,6 +1,6 @@
-$red: #A81B1C;
-$blue: #022859;
+$blue: #A81B1C;
+$red: #022859;
 $black: rgb(0, 0, 0);
 $brown: #E7D0C0;
-$white: #E6EAED;
+$white: #F9F5E9;
 $gold: #FFC700;
